# JudgeBench

./: .gitignore  Makefile  pyproject.toml
src/judgebench/: run_judge.py
src/judgebench/utils/: file_operations.py  judges.py  metrics.py  models.py  prompts.py
